# osgPPU

./: AUTHORS.txt  CMakeLists.txt  CONTRIBUTORS.txt  ChangeLog  LICENSE.txt  Makefile  README  README.txt  configure  createChangelog.sh
CMakeModules/: CMakeLists.txt  FindOSG.cmake  FindOpenThreads.cmake  ModuleInstall.cmake  OsgDetermineCompiler.cmake  OsgPPUCPack.cmake  OsgPPUCPackConfig.cmake.in  OsgPPUMacroUtils.cmake
CMakeModules/cuda/: CMakeLists.txt  CudaDependency.cmake  FindCuda.cmake
Data/: CMakeLists.txt  bypass.ppu  cessnafire.osg  cuda.ppu  dof.ppu  hdr.ppu  motionblur.ppu  temple.ive
Data/Images/: CMakeLists.txt  lenna.rgb  lenna_noise.rgb
Data/glsl/: CMakeLists.txt  depth_of_field_fp.glsl  gauss_convolution_1Dx_fp.glsl  gauss_convolution_1Dy_fp.glsl  luminance_adapted_fp.glsl  luminance_mipmap_fp.glsl  ssao_fp.glsl  ssao_renderscene_fp.glsl  ssao_renderscene_vp.glsl
Make/: Makedefs  Makedirrules  Makerules
doc/: CMakeLists.txt  Makefile  config.doxy  createChangelog.sh  footer.html
doc/scripts/: CMakeLists.txt
include/: Makefile
include/osgPPU/: BarrierNode.h  Camera.h  Export.h  Makefile  PPUInOut.h  PPUText.h  Pipeline.h  Pipeline.h.old  PostProcess.h  PostProcessUnit.h  Processor.h  Shader.h  ShaderAttribute.h  Text.h  Unit.h  UnitBypass.h  UnitBypassRepeat.h  UnitCameraAttachmentBypass.h  UnitDepthbufferBypass.h  UnitInHistoryOut.h  UnitInMipmapOut.h  UnitInOut.h  UnitInOutModule.h  UnitInResampleOut.h  UnitMipmapInMipmapOut.h  UnitOut.h  UnitOutCapture.h  UnitText.h  UnitTexture.h  Utility.h  Visitor.h
scripts/: svn2cl.xsl
src/: CMakeLists.txt  Makefile
src/example/: CMakeLists.txt  Makefile  hdrppu.cpp  hdrppu.h  osgppu.cpp  osgteapot.cpp
src/example/Data/: blur.ppu  brightpass_fp.glsl  bypass_fp.glsl  depth_of_field_fp.glsl  dof.ppu  gauss_convolution_1Dx_fp.glsl  gauss_convolution_1Dy_fp.glsl  hdr.ppu  luminance_adapted_fp.glsl  luminance_fp.glsl  luminance_mipmap_fp.glsl  tonemap_hdr_fp.glsl
src/example/Data/glsl/: tonemap_hdr_fp.glsl
src/example/blurScene/: CMakeLists.txt  blurScene.cpp
src/example/cubemap/: CMakeLists.txt  cubemap.cpp
src/example/cuda/: BlurKernelWrapper.h  CMakeLists.txt  Export.h  ProcessingModule.cpp  cuda.cpp  kernel.cu
src/example/diffusion/: CMakeLists.txt  diffusion.cpp  simple.h
src/example/dof/: CMakeLists.txt  dofppu.cpp  dofppu.h
src/example/glow/: CMakeLists.txt  glow.cpp
src/example/hdr/: CMakeLists.txt  hdrppu.h  osgppu.cpp  osgteapot.h
src/example/motionblur/: CMakeLists.txt  view.cpp
src/example/ssao/: CMakeLists.txt  simple.h  ssao.cpp
src/example/texture3D/: CMakeLists.txt  texture3D.cpp
src/example/video/: CMakeLists.txt  video.cpp
src/example/view/: osgteapot.h  view.cpp
src/example/viewer/: CMakeLists.txt  osgteapot.h  view.cpp
src/osgPPU/: CMakeLists.txt  Camera.cpp  ColorAttribute.cpp  Config.in  Makefile  PPUInOut.cpp  PPUText.cpp  Pipeline.cpp  Pipeline.cpp.old  PostProcess.cpp  PostProcessUnit.cpp  Processor.cpp  Shader.cpp  ShaderAttribute.cpp  Text.cpp  Unit.cpp  UnitBypass.cpp  UnitBypassRepeat.cpp  UnitCamera.cpp  UnitCameraAttachmentBypass.cpp  UnitDepthbufferBypass.cpp  UnitInHistoryOut.cpp  UnitInMipmapOut.cpp  UnitInOut.cpp  UnitInOutModule.cpp  UnitInOutRepeat.cpp  UnitInResampleOut.cpp  UnitMipmapInMipmapOut.cpp  UnitOut.cpp  UnitOutCapture.cpp  UnitText.cpp  UnitTexture.cpp  Utility.cpp  Visitor.cpp
src/osgPlugins/: CMakeLists.txt
src/osgPlugins/osgPPU/: Base.cpp  Base.h  CMakeLists.txt  IO_Unit.cpp  ReaderWriterPPU.cpp
