SET(TARGET_TARGETNAME
    hdr
)

SET(TARGET_SRC 
    osgppu.cpp
)
SET(TARGET_H 
	#none
    hdrppu.h
    osgteapot.h
)
#### end var setup  ###

ADD_EXECUTABLE(${TARGET_TARGETNAME} ${TARGET_SRC} ${TARGET_H})
LINK_WITH_VARIABLES(${TARGET_TARGETNAME}     
    OSG_LIBRARY
    OSGDB_LIBRARY
    OSGGA_LIBRARY
    OSGTEXT_LIBRARY
    OSGUTIL_LIBRARY
    OSGVIEWER_LIBRARY
)
LINK_INTERNAL(${TARGET_TARGETNAME} osgPPU)
LINK_EXTERNAL(${TARGET_TARGETNAME} ${OPENGL_LIBRARIES}) 
LINK_WITH_VARIABLES(${TARGET_TARGETNAME} OPENTHREADS_LIBRARY)

SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES DEBUG_POSTFIX "d")
if(MSVC)
	SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES PREFIX "../")
	SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES PROJECT_LABEL "Example ${TARGET_TARGETNAME}")
endif(MSVC)
