IF(DYNAMIC_OSGPPU)
    ADD_DEFINITIONS(-DOSGPPU_LIBRARY)
ELSE(DYNAMIC_OSGPPU)
    ADD_DEFINITIONS(-DOSGPPU_LIBRARY_STATIC)
ENDIF(DYNAMIC_OSGPPU)

SET(LIB_NAME osgPPU)
SET(HEADER_PATH ${osgPPU_SOURCE_DIR}/include/${LIB_NAME})

SET(LIB_PUBLIC_HEADERS
    ${HEADER_PATH}/Export.h
    ${HEADER_PATH}/PPUInOut.h
    ${HEADER_PATH}/PPUText.h
    ${HEADER_PATH}/Processor.h
    ${HEADER_PATH}/Shader.h
    ${HEADER_PATH}/Unit.h
)

ADD_LIBRARY(${LIB_NAME}
    ${OSGPPU_USER_DEFINED_DYNAMIC_OR_STATIC}
    ${LIB_PUBLIC_HEADERS}
    PPUInOut.cpp
    PPUText.cpp
    Processor.cpp
    Shader.cpp
    Unit.cpp
)

LINK_WITH_VARIABLES(${LIB_NAME}     
    OSG_LIBRARY
    OSGDB_LIBRARY
    OSGTEXT_LIBRARY
    OSGUTIL_LIBRARY
)
LINK_CORELIB_DEFAULT(${LIB_NAME})

SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES DEBUG_POSTFIX "d")
if(MSVC)
	SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PREFIX "../")
	SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES IMPORT_PREFIX "../")
endif(MSVC)

INCLUDE(ModuleInstall OPTIONAL)
